<resources>
    <string name="app_name">MenuProject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_activity">NEW ACTIVITY</string>
    <string name="share">SHARE</string>
    <string name="map">MAP</string>
    <string name="web">WEB</string>
    <string name="phone">Phone</string>
    <string name="sms">SMS</string>
    <string name="newText">Hello, Briana Figueroa</string>
    <string name="action_Help_Text">Help</string>
    <string name="HelpMenuText">This is the Help menu... not much help here, might want to go back.</string>
</resources>